--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bs-platform": "^2.2.3"
   },
   "dependencies": {
-    "coinbase": "^2.0.7"
+    "coinbase": "^2.0.7",
+    "express": "^4.16.3"
   }
 }
