--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "coinbase": "^2.0.7",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "telegraf": "^3.20.0"
   }
 }
