--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "coinbase": "^2.0.7",
     "express": "^4.16.3",
+    "request": "^2.85.0",
+    "request-promise-native": "^1.0.5",
     "telegraf": "^3.20.0"
   }
 }
