--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,10 +1,16 @@
 {
   "name": "smile-cycle-bs2",
   "version": "0.1.0",
-  "sources": {
-    "dir" : "src",
-    "subdirs" : true
-  },
+  "sources": [
+    {
+      "dir" : "src",
+      "subdirs" : true
+    },
+    {
+      "dir": "__tests__",
+      "type": "dev"
+    }
+  ],
   "package-specs": {
     "module": "commonjs",
     "in-source": true
@@ -13,6 +19,7 @@
   "bs-dependencies": [
       // add your bs-dependencies here 
   ],
+  "bs-dev-dependencies": ["@glennsl/bs-jest"],
   "warnings": {
     "error" : "+101"
   },
