--- a/bsconfig.json
+++ b/bsconfig.json
@@ -21,7 +21,7 @@
   ],
   "bs-dev-dependencies": ["@glennsl/bs-jest"],
   "warnings": {
-    "error" : "+101"
+    "error" : "+A"
   },
   "refmt": 3
 }
