--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "smile-cycle-bs2",
   "version": "0.1.0",
   "scripts": {
+    "start": "node lib/js/src/index.js",
     "clean": "bsb -clean-world",
     "build": "bsb -make-world",
     "watch": "bsb -make-world -w",
@@ -11,6 +12,9 @@
   "keywords": [
     "BuckleScript"
   ],
+  "engines": {
+    "node": ">=4.3.2"
+  },
   "author": "",
   "license": "MIT",
   "devDependencies": {
