--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@glennsl/bs-jest": "^0.4.2",
-    "bs-platform": "^2.2.3"
+    "@glennsl/bs-jest": "^0.4.2"
   },
   "dependencies": {
+    "bs-platform": "^2.2.3",
     "coinbase": "^2.0.7",
     "express": "^4.16.3",
     "request": "^2.85.0",
