--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,13 @@
 runtime: nodejs
 env: flex
 
-manual_scaling:
-  instances: 1
+automatic_scaling:
+  min_num_instances: 0
+  max_num_instances: 2
+  cool_down_period_sec: 180
+  cpu_utilization:
+    target_utilization: 0.6
+
 resources:
   cpu: 1
   memory_gb: 0.5
